# Copyright 2022 Collabora Ltd.
# SPDX-License-Identifier: LGPL-2.1-or-later

install_data(
  'flatpak',
  install_dir : get_option('datadir') / 'bash-completion' / 'completions',
)
install_data(
  '_flatpak',
  install_dir : get_option('datadir') / 'zsh' / 'site-functions',
)
install_data(
  'flatpak.fish',
  install_dir : get_option('datadir') / 'fish' / 'vendor_completions.d',
)
