# Copyright 2022 Collabora Ltd.
# SPDX-License-Identifier: LGPL-2.1-or-later

install_data(
  'org.freedesktop.Flatpak.xml',
  'org.freedesktop.Flatpak.Authenticator.xml',
  'org.freedesktop.portal.Flatpak.xml',
  install_dir : get_option('datadir') / 'dbus-1' / 'interfaces',
)
install_data(
  'tmpfiles.d/flatpak.conf',
  install_dir : get_option('tmpfilesdir'),
)
